--- a/PokerGame/.project
+++ b/PokerGame/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Trabalho 1- Poker</name>
+	<name>PokerGame</name>
 	<comment></comment>
 	<projects>
 	</projects>
